--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,14 @@
     <!where the rest of the page goes>
     <div class="content">
         <header class="header" id="header">
+            <nav class="nav container">
+                <a href=#" class="nav__logo"></a>
+                <span class="-cicrle">R</span>
+                <span class="nav__logo-name">Zhad</span>
+                <div class="nav__menu" id="nav__menu">
+                    <span class="nav__title">Menu</span>
+                </div>
+            </nav>
 
         </header>
 
