--- a/src/index.html
+++ b/src/index.html
@@ -25,12 +25,47 @@
     <div class="content">
         <header class="header" id="header">
             <nav class="nav container">
+
                 <a href=#" class="nav__logo"></a>
                 <span class="-cicrle">R</span>
                 <span class="nav__logo-name">Zhad</span>
+
                 <div class="nav__menu" id="nav__menu">
+
                     <span class="nav__title">Menu</span>
+                    <h3 class="nav__name">Zhad</h3>
+                    <ul class="nav__list">
+
+                        <li class="nav__item">
+                            <a href="#home" class="nav__link">Home</a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#skills" class="nav__link">skills</a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#about" class="nav__link">about</a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#contact" class="nav__link">contact</a>
+                        </li>
+                    </ul>
+
+                    <!Close button>
+                    <div class="nav__close" id="nav-close">
+                        <i class="ri-close-line"></i>
+                    </div>
                 </div>
+                <div class="nav__buttons">
+                    <! Toggle >
+                    <div class="nav__toggle" id="nav-toggle">
+                        <i class="ri-menu-4-line"></i>
+                    </div>
+
+                </div>
+
             </nav>
 
         </header>
